# sftp

./: .env  .gitignore  Cargo.toml
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
mountpoints/u1/: write.txt
mountpoints/u1/haha/: tehe.txt
myent/: Cargo.toml
myent/src/: lib.rs  prelude.rs  sftp.rs
src/: main.rs
